[package]
name = "greetings_rust"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-settings = "0.7.1"
toml= "0.8.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
utoipa = { version = "4", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "7", features = ["actix-web"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0.47"
validator = "0.18.1"
validator_derive = "0.18.1"
derive_more = "0.99.18"
uuid = { version = "1.10.0", features = ["v7"]}
#env_logger = "0.10.0"
rdkafka = { version = "0.36.2", features = ["cmake-build"] }
futures = "0.3"
async-trait = "0.1.77"
log = { version = "0.4.20", features = [] }
serde_with = "3.9.0"
config = "0.14.0"
dotenv = "0.15.0"
opentelemetry = "0.24.0"
opentelemetry_sdk = "0.24.1"
opentelemetry-stdout = { version = "0.5.0", features = ["trace"] }
opentelemetry-appender-log = "0.5.0"
opentelemetry-semantic-conventions="0.16.0"


