[package]
name = "greeting-receiver"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
utoipa = { version = "5.3.1", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "9", features = ["actix-web"] }
chrono = { version = "0.4", features = ["serde"] }
validator = "0.20.0"
validator_derive = "0.20.0"
derive_more = { version = "2.0.1", features = ["full"]}
uuid = { version = "1.16.0", features = ["v7"]}
rdkafka = { version = "0.37.0" }
futures = "0.3"
async-trait = "0.1.83"
log = { version = "0.4.20", features = [] }
config = "0.14.0"
dotenv = "0.15.0"
#
greeting_otel={git = "https://github.com/arnecdn/greeting_otel_lib", version = "0.30.0"}
#greeting_otel={path= "../greeting_otel", version = "0.28.0"}
actix-web-opentelemetry = { version = "0.21.0", features = ["metrics"] }
opentelemetry = {version = "0.30.0",features = ["metrics", "logs"] }

tracing-subscriber= {version= "0.3.18",features = ["env-filter","registry", "std"]}
tracing = { version = "0.1.40", features = ["std"]}
tracing-opentelemetry = "0.31.0"

